# FocalPoint

./: .env.ci.example  .env.example  .gitattributes  .gitignore  .gitmessage  .impeccable.md  00_START_HERE.md  ADR.md  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CHARTER.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FUNCTIONAL_REQUIREMENTS.md  GOVERNANCE.md  LICENSE  MAINTAINERS.md  NOTICES.md  PLAN.md  PRD.md  PRIVACY.md  PROJECT.md  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  Taskfile.yml  USER_JOURNEYS.md  clippy.toml  deny.toml  lefthook.yml  rustfmt.toml  sbom.cdx.json  worklog.md
.agileplus/: agileplus.db
.cargo/: config.toml
.githooks/: commit-msg  pre-push
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  connector_proposal.md  connector_request.yml  feature_request.md  feature_request.yml  rule_template_proposal.md
.github/workflows/: cargo-audit.yml  cargo-doc.yml  cli-demo.yml  codeql.yml  connector-manifest.yml  dco.yml  disk-budget-weekly.yml  docs.yml  e2e-smoke.yml  fuzz.yml  perf-guard.yml  pr-checks.yml  quality-gate.yml  release-dry-run.yml  rust.yml  sbom-refresh.yml  scorecard.yml  supply-chain.yml  traceability.yml
apps/android/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
apps/builder/: .gitignore  README.md  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
apps/ios/: README.md
apps/vscode-extension/: .gitignore  .vscodeignore  CHANGELOG.md  README.md  language-configuration.json  package.json  tsconfig.json
assets/audio/: gen_cues  (+4 more)
assets/motion/: Cargo.toml  README.md  build.sh  size-gate.sh
assets/motion/lottie/: achievement-unlock.json  emergency-exit.json  error-shake.json  focus-end.json  focus-start.json  intervention-warn.json  mascot-blink.json  mascot-yawn.json  rule-create.json  rule-fire.json  success-checkmark.json  sync-pulse.json
assets/motion/rive/: coachy-state-machine.json
assets/motion/src/: lottie-converter.rs  rive-converter.rs
assets/motion/tests/: motion_tests.rs
crates/connector-canvas/: Cargo.toml
crates/connector-canvas/src/: api.rs  auth.rs  events.rs  lib.rs  models.rs
crates/connector-canvas/tests/: integration.rs
crates/focus-cli/: Cargo.toml
crates/focus-cli/examples/: backup_restore.rs
crates/focus-cli/src/: main.rs
crates/focus-cli/tests/: json_output_test.rs
crates/focus-connectors/: Cargo.toml
crates/focus-connectors/src/: lib.rs  mcp_bridge.rs  signature_verifiers.rs
crates/focus-crypto/: Cargo.toml
crates/focus-crypto/benches/: focus_crypto_benchmarks.rs
crates/focus-crypto/src/: keychain.rs  lib.rs  unlock.rs
crates/focus-eval/: Cargo.toml
crates/focus-eval/benches/: eval_batched.rs  eval_tick.rs  pipeline.rs
crates/focus-eval/src/: lib.rs
crates/focus-events/: Cargo.toml
crates/focus-events/src/: dedup.rs  lib.rs
crates/focus-ffi/: Cargo.toml
crates/focus-ffi/include/: focus_ffiFFI.h
crates/focus-ffi/scripts/: ios-bindings.sh
crates/focus-ffi/src/: focus_ffi.udl  lib.rs
crates/focus-ffi/tests/: mascot_roundtrip.rs
crates/focus-ir/: Cargo.toml
crates/focus-ir/src/: lib.rs
crates/focus-lang/: Cargo.toml
crates/focus-lang/benches/: compile.rs
crates/focus-lang/src/: bulk.rs  lib.rs  sandbox.rs
crates/focus-mcp-server/: Cargo.toml
crates/focus-mcp-server/src/: lib.rs  main.rs  server.rs  tools.rs
crates/focus-mcp-server/src/transport/: http_sse.rs  websocket.rs
crates/focus-mcp-server/tests/: http_sse_tests.rs  integration_tests.rs  websocket_tests.rs
crates/focus-rules/: Cargo.toml
crates/focus-rules/benches/: rule_evaluation.rs
crates/focus-rules/src/: builder.rs  lib.rs
docs/: FUNCTIONAL_REQUIREMENTS.md  roadmap_v2.md  spec_id_map.md
docs-site/: 404.md  design_audit_2026_04_24.md  faq.md  index.md  package.json  status.md  troubleshooting.md
examples/rule-library/tests/: Cargo.toml
examples/rule-library/tests/src/: main.rs
fuzz/: Cargo.toml
sbom/: crates_connector-canvas.cdx.json  crates_connector-fitbit.cdx.json  crates_connector-gcal.cdx.json  crates_connector-github.cdx.json  crates_connector-linear.cdx.json  crates_connector-notion.cdx.json  crates_connector-readwise.cdx.json  crates_connector-strava.cdx.json  crates_connector-testkit.cdx.json  crates_focus-always-on.cdx.json  crates_focus-asset-fetcher.cdx.json  crates_focus-audit.cdx.json  crates_focus-backup.cdx.json  crates_focus-calendar.cdx.json  crates_focus-ci-watcher.cdx.json  crates_focus-cli.cdx.json  crates_focus-coaching.cdx.json  crates_focus-connectors-mock-familycontrols.cdx.json  crates_focus-connectors.cdx.json  crates_focus-crypto.cdx.json  crates_focus-demo-seed.cdx.json  crates_focus-domain.cdx.json  crates_focus-entitlements.cdx.json  crates_focus-eval.cdx.json  crates_focus-events.cdx.json  crates_focus-ffi.cdx.json  crates_focus-icon-gen.cdx.json  crates_focus-ir.cdx.json  crates_focus-lang.cdx.json  crates_focus-mascot.cdx.json  crates_focus-mcp-server.cdx.json  crates_focus-observability.cdx.json  crates_focus-penalties.cdx.json  crates_focus-planning.cdx.json  crates_focus-plugin-sdk.cdx.json  crates_focus-plugin-sdk_examples_slack-reference.cdx.json  crates_focus-policy.cdx.json  crates_focus-release-bot.cdx.json  crates_focus-replay.cdx.json  crates_focus-rewards.cdx.json  (+21 more)
scripts/: Cargo.toml  demo-walkthrough.rs  generate-icons.rs  render-store-screenshots.rs  smoke-e2e.rs
scripts/ci/: README.md  focalpoint-ci.plist
scripts/tests/: store_screenshots.rs
services/graphql-gateway/: Cargo.toml  Dockerfile  docker-compose.yml  fly.toml  schema.graphql
services/graphql-gateway/src/: auth.rs  lib.rs  main.rs  model.rs  rate_limit.rs  subscription.rs
services/templates-registry/: Cargo.toml  README.md  openapi.yaml
services/templates-registry/data/: seed.sql
services/templates-registry/src/: auth.rs  db.rs  error.rs  handlers.rs  main.rs  models.rs  ratelimit.rs
tests/: scaffold_connector.rs
tooling/commit-msg-check/: Cargo.toml
tooling/commit-msg-check/src/: main.rs
(+1251 files in other folders)
