[workspace]
resolver = "2"
members = [
    "crates/focus-always-on",
    "crates/focus-domain",
    "crates/focus-eval",
    "crates/focus-events",
    "crates/focus-connectors",
    "crates/focus-ir",
    "crates/focus-lang",
    "crates/focus-rules",
    "crates/focus-rewards",
    "crates/focus-penalties",
    "crates/focus-policy",
    "crates/focus-sync",
    "crates/focus-sync-store",
    "crates/focus-storage",
    "crates/focus-audit",
    "crates/focus-crypto",
    "crates/focus-time",
    "crates/focus-ffi",
    "crates/connector-canvas",
    "crates/connector-gcal",
    "crates/connector-github",
    "crates/connector-testkit",
    "crates/focus-cli",
    "crates/focus-mascot",
    "crates/focus-coaching",
    "crates/focus-planning",
    "crates/focus-scheduler",
    "crates/focus-calendar",
    "crates/focus-rituals",
    "crates/focus-templates",
    "crates/focus-transpilers",
    "crates/focus-mcp-server",
    "crates/focus-release-bot",
    "crates/focus-asset-fetcher",
    "crates/focus-webhook-server",
    "crates/focus-ci-watcher",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.82"

[workspace.dependencies]
# Core
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Async
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# HTTP / OAuth
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
oauth2 = "5.0"

# Storage
rusqlite = { version = "0.33", features = ["bundled"] }

# Crypto
sha2 = "0.10"
ring = "0.17"
secrecy = "0.10"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# FFI
uniffi = "0.28"

# Config / Signing
toml = "0.8"
ed25519-dalek = { version = "2.1", features = ["rand_core", "std"] }
rand_core = "0.6"

# MCP SDK
mcp-sdk = "0.0.3"

# Platform-specific paths
dirs = "5.0"

# Benchmarking
criterion = { version = "0.5", default-features = false }

# Workspace-local crates (path deps added per-crate Cargo.toml as needed)
