[workspace]

[package]
name = "fuzz"
version = "0.0.1"
publish = false
edition = "2021"

[dependencies]
focus-ir = { path = "../crates/focus-ir" }
focus-lang = { path = "../crates/focus-lang" }
focus-audit = { path = "../crates/focus-audit" }
serde_json = "1.0"
sha2 = "0.10"
arbitrary = { version = "1.3", features = ["derive"] }
libfuzzer-sys = "0.4"

[[bin]]
name = "ir_hash_stability"
path = "fuzz_targets/ir_hash_stability.rs"
test = false
doc = false

[[bin]]
name = "starlark_parse_invariants"
path = "fuzz_targets/starlark_parse_invariants.rs"
test = false
doc = false

[[bin]]
name = "audit_chain_verify"
path = "fuzz_targets/audit_chain_verify.rs"
test = false
doc = false

[[bin]]
name = "canonical_json"
path = "fuzz_targets/canonical_json.rs"
test = false
doc = false
