[workspace]

[package]
name = "focus-motion-pipeline"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "rive-converter"
path = "src/rive-converter.rs"

[[bin]]
name = "lottie-converter"
path = "src/lottie-converter.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
