[package]
name = "focus-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "focus"
path = "src/main.rs"

[dependencies]
clap.workspace = true
anyhow.workspace = true
chrono.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
uuid.workspace = true
focus-storage = { path = "../focus-storage" }
focus-audit = { path = "../focus-audit" }
focus-planning = { path = "../focus-planning" }
focus-templates = { path = "../focus-templates" }
focus-rules = { path = "../focus-rules" }
focus-rewards = { path = "../focus-rewards" }
focus-penalties = { path = "../focus-penalties" }
focus-domain = { path = "../focus-domain" }
