[package]
name = "focus-connectors"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
focus-domain = { path = "../focus-domain" }
focus-events = { path = "../focus-events" }
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
anyhow.workspace = true
secrecy.workspace = true
hmac = "0.12"
sha2 = { workspace = true }
subtle = "2.1"
hex = "0.4"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
