[package]
name = "focus-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
anyhow.workspace = true
ring.workspace = true
secrecy.workspace = true
uuid.workspace = true
chrono.workspace = true
