[package]
name = "focus-ir"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
focus-rules = { path = "../focus-rules" }
