[package]
name = "focus-lang"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
starlark = "0.13"
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
anyhow.workspace = true
focus-ir = { path = "../focus-ir" }

[dev-dependencies]
