[package]
name = "focus-rules"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
focus-domain = { path = "../focus-domain" }
focus-events = { path = "../focus-events" }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
