[package]
name = "templates-registry"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.7"
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
chrono = { workspace = true, features = ["serde"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = { workspace = true }
anyhow = { workspace = true }
rusqlite = { workspace = true, features = ["chrono", "uuid"] }
ed25519-dalek = "2"
hex = "0.4"
base64 = "0.21"
sha2 = "0.10"
rand = "0.8"
walkdir = "2"
tar = "0.4"
zstd = "0.12"
bytes = "1"
http-body-util = "0.1"
multipart = "0.18"
tempfile = "3"
dotenv = "0.15"

focus-templates = { path = "../../crates/focus-templates" }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio-test = "0.4"
