[workspace]

[package]
name = "rule-library-parity-test"
version = "0.1.0"
edition = "2021"

[dependencies]
focus-ir = { path = "../../../crates/focus-ir" }
focus-lang = { path = "../../../crates/focus-lang" }
focus-transpilers = { path = "../../../crates/focus-transpilers" }
serde_json = "1.0"
anyhow = "1.0"
sha2 = "0.10"
walkdir = "2.4"
thiserror = "1.0"
hex = "0.4"

[[bin]]
name = "parity_test"
path = "src/main.rs"
